# mio

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260609_0001_initial_chat.py  20260613_0002_m2_classification_trace.py
backend/src/mio/: __init__.py  config.py  main.py
backend/src/mio/agent/: __init__.py  graph.py  prompt.py  safety.py
backend/src/mio/api/: dependencies.py  errors.py  routes.py  schemas.py
backend/src/mio/chat/: __init__.py  registry.py
backend/src/mio/classification/: __init__.py  base.py  exceptions.py  factory.py  mock.py  models.py  openai_compatible.py
backend/src/mio/db/: base.py  models.py  seed.py  session.py
backend/src/mio/llm/: base.py  factory.py  mock.py  openai_compatible.py
backend/src/mio/services/: conversations.py  recovery.py  traces.py
backend/tests/: conftest.py  test_agent_and_providers.py  test_cancel_and_isolation.py  test_classification.py  test_classifier_factory.py  test_config.py  test_conversations_api.py  test_graph_routing.py  test_health_and_profile.py  test_openai_compatible_classifier.py  test_provider_failure.py  test_runtime_behaviors.py  test_trace_persistence.py  test_traces_api.py
design/: DESIGN.md  UI-BRIEF.md
design/screens/: chat.md
docs/: ai-companion-prd.md  mio-ai-companion-avatar-voice-design.md  mio-ai-companion-design.md  mio-ai-companion-diagrams.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+88 files in other folders)
