[project]
name = "mio-ai-companion-backend"
version = "0.1.0"
description = "Backend service for Mio AI Companion"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.0,<2",
    "asyncpg>=0.30.0,<1",
    "fastapi>=0.115.0,<1",
    "httpx>=0.28.0,<1",
    "langgraph>=0.4.0,<1",
    "pydantic-settings>=2.9.0,<3",
    "sqlalchemy[asyncio]>=2.0.40,<3",
    "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0,<1",
    "asgi-lifespan>=2.1.0,<3",
    "mypy>=1.15.0,<2",
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.26.0,<1",
    "ruff>=0.11.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The default value of `allowed_objects` will change:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["mio"]
